--- a/UT3/Tarea Media Querie/responsive-mini-tablet.css
+++ b/UT3/Tarea Media Querie/responsive-mini-tablet.css
@@ -1,14 +1,20 @@
-@media (min-width: 0px) and (max-width: 800px) {
+/*@media (min-width: 500px) and (max-width: 640px) {
+
     main{
         width: 100%;
         gap: 2rem;
     }
 
     #container-cajas-contacto{
-        width: 65%;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        width: 40%;
+    }
+
+    #container-cajas-form-ubi>div{
+        height: 30rem;
+    }
+
+    #mapa{
+        height: 30rem;
     }
 
     .cajas-contacto{
@@ -46,4 +52,11 @@
     #div-email-nombre>div{
         flex-direction: column;
     }
+
+    #container-cajas-form-ubi{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    
 }
